src/components/layout.css
@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
@import url('https://fonts.googleapis.com/css?family=Raleway:700&display=swap');

body {
  font-family: 'Open Sans', sans-serif;
  font-size: 100%; /*15px-20px is readable for body text*/
  line-height: 2; /*1.2-1.5 is readable for body text*/
  /* cross-browser */
  -webkit-font-smoothing: antialiased; /* -webkit- works for early version of Chrome, Safari */
  -moz-osx-font-smoothing: grayscale; /* -moz- works for early version of Firefox */
  margin: 0;
  background-color: #48355b;
  overflow-x: hidden;
  overflow-y: hidden;
}

body::after {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: '';
  background-image: url(../images/noise.gif);
  opacity: 0.05;
  z-index: 10000;
  pointer-events: none;
}

a {
  color: #f1e9e6;
  text-decoration: none;
}

button {
  background-color: transparent;
  outline: none;
  border: none;
}

.introduction {
  /* border: 1px solid green; */
  position: absolute;
  top: 0;
  bottom: 0;
  width: 100%;
  text-align: center;
  opacity: 0;
  animation-name: IntroductionAnimation;
  animation-duration: 3s;
  animation-delay: 0.1s;
  animation-fill-mode: forwards;
  animation-timing-function: cubic-bezier(0.2, 0.8, 0.2, 1);
}
@keyframes IntroductionAnimation {
  0% {
    opacity: 0;
    transform: translateY(20px);
  }
  100% {
    opacity: 1;
    transform: translateY(0);
  }
}

.intro-container {
  /* border: 1px solid red; */
  max-width: 1024px;
  padding: 0 120px;
  position: relative;
  left: 50%;
  top: 45%;
  transform: translate(-50%, -50%);
  background: linear-gradient(135deg, #ee5e69 -50%, #f1e9e6 100%);
  -webkit-background-clip: text;
  background-clip: text;
  -webkit-text-fill-color: rgba(255, 255, 255, 0);
}

.intro-container .Hi {
  margin: 0;
  color: #f1e9e6;
  font-family: sans-serif;
  font-weight: 700;
  font-size: 7.4vh;
  line-height: 1.1em;
}

.intro-container p {
  margin: 0;
  /* margin-top: 50px; */
  color: #f1e9e6;
  font-family: 'Raleway', sans-serif;
  font-size: 20px;
  font-weight: 700;
}

.band-container {
  /* border: 1px solid green; */
  display: inline-block;
  vertical-align: middle;
}

.band {
  /* border: 1px solid green; */
  position: relative;
  top: 0;
  left: 0;
  background: linear-gradient(135deg, #ee5e69 -50%, #f1e9e6 100%);
  -webkit-background-clip: text;
  background-clip: text;
  -webkit-text-fill-color: transparent;
  overflow-x: hidden;
  overflow-y: hidden;
}

.band:hover {
  background: #f1e9e6;
  -webkit-background-clip: text;
  background-clip: text;
  -webkit-text-fill-color: transparent;
}

.band a {
  border-bottom: 2px solid rgba(241, 233, 230, 0.5);
}

.band:hover a {
  border-bottom: none;
}

.band:hover::before {
  transform: translateX(0);
}

.band::before {
  /* border: 1px solid green; */
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  transform: translateX(-102%);
  background: linear-gradient(
    90deg,
    rgba(237, 94, 106, 0.5) 0%,
    rgba(80, 118, 166, 0.5) 100%
  );
  -webkit-text-fill-color: #f1e9e6;
  z-index: -1;
  transition: 0.5s ease-out;
  /* display: none; */
}

.title {
  list-style-type: none;
  padding: 0;
  margin: 0;
  position: absolute;
  height: 100%;
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  writing-mode: vertical-lr;
  padding-left: 90px;
  color: #f1e9e6;
}

.title li {
  text-transform: uppercase;
  transform: rotateZ(180deg);
  font-size: 0.8vw;
  letter-spacing: 1px;
}

.social {
  list-style-type: none;
  padding: 0;
  margin: 0;
  position: absolute;
  right: 0;
  padding-right: 100px;
  bottom: 60px;
  height: 240px;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: flex-end;
  color: #f1e9e6;
}

.social p {
  margin: 0;
  letter-spacing: 1px;
  font-size: 14px;
  font-weight: 100;
}

.shortLine {
  /* border: 1px solid green; */
  width: 60px;
  height: 5.24vw;
  position: absolute;
  bottom: 0;
  left: 50%;
  transform: translateX(-50%);
  cursor: pointer;
  transition: 1s cubic-bezier(0.165, 0.84, 0.44, 1);
}

.shortLine:hover {
  height: 3.8vw;
}

.shortLine span {
  width: 1px;
  height: 100%;
  background: linear-gradient(#ee5e69 0, #f1e9e6 100%);
  position: absolute;
  left: 50%;
}

@media (max-width: 1024px) {
  .intro-container {
    padding: 0 60px;
    top: 45%;
  }
  .title {
    /* visibility: hidden; */
    padding-left: 30px;
  }
  .social {
    /* visibility: hidden; */
    padding-right: 40px;
  }
}

@media (max-width: 512px) {
  .intro-container {
    padding: 30px;
    top: 50%;
  }
  .intro-container .Hi {
    font-size: 6vh;
  }
  .intro-container p {
    margin-top: 30px;
    font-size: 16px;
    font-weight: 700;
  }
  .title {
    visibility: hidden;
  }
  .social {
    visibility: hidden;
  }
}

/* ABOUT ME */

.AboutMe {
  background-color: #f1e9e6;
  position: relative;
}

.videoContainer {
  /* border: 1px solid green; */
  position: relative;
  width: 100%;
  max-height: 500px;
  overflow: hidden;
}
.backgroundVideo {
  margin-top: -10%;
}

.container {
  /* border: 1px solid green; */
  position: relative;
  width: 100%;
  display: grid;
  grid-template-columns: auto 340px;
  bottom: 0;
}
.leftContainer {
  /* border: 1px solid green; */
  position: relative;
  width: 100%;
}

.rightContainer {
  /* border: 1px solid red; */
  background-color: #48355b;
}
.name {
  position: relative;
  margin-top: -200px;
  margin-left: 120px;
  color: #f1e9e6;
  font-weight: 700;
  font-size: 24px;
  line-height: 1.2;
  letter-spacing: -1.2px;
}
.liran {
  position: relative;
  margin-top: 20px;
  margin-left: 120px;
  color: #48355b;
  font-family: 'Raleway', sans-serif;
  font-weight: 800;
  font-size: 144px;
  line-height: 0.8;
  letter-spacing: -2px;
}
.yin {
  position: relative;
  margin-left: 120px;
  color: #48355b;
  font-family: 'Raleway', sans-serif;
  font-weight: 800;
  font-size: 144px;
  line-height: 0.8;
  letter-spacing: -2px;
}

.SocialGroup1 {
  position: absolute;
  top: 35px;
  left: 120px;
  display: grid;
  grid-template-columns: repeat(3, 3fr);
  column-gap: 10px;
  z-index: 100;
}

svg {
  stroke: #f1e9e6;
}

svg:hover {
  stroke: #31223f;
}

.headshotContainer {
  position: relative;
  margin: auto;
  top: -55px;
  width: 110px;
  height: 110px;
  border: 2px solid rgba(255, 255, 255, 0.2);
  border-radius: 50%;
}

.headshotContainer img {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  display: block;
  margin: auto;
  border-radius: 50%;
}

.resumeContainer a {
  position: relative;
  top: -20px;
  margin: auto;
  color: #f1e9e6;
  font-size: 20px;
  width: 200px;
  border: 2px solid #f1e9e67e;
  border-radius: 10px;
  display: grid;
  grid-template-columns: repeat(2, auto);
  justify-items: center;
  align-items: center;
}
.rightContainer a img {
  /* border: 1px solid green; */
  padding-left: 5px;
  padding-right: 0;
}
.rightContainer a p {
  /* border: 1px solid green; */
  line-height: 0; /*1.2-1.5 is readable for body text*/
}

.leftContainer p {
  width: 80%;
  margin: 50px auto;
  position: relative;
  letter-spacing: 0.5px;
}

strong a {
  -webkit-text-fill-color: black;
}

@media (max-width: 640px) {
  .videoContainer {
    position: relative;
    height: auto;
  }
  .SocialGroup1 {
    display: none;
  }
  .rightContainer {
    display: none;
  }
  .container {
    grid-template-columns: auto;
  }
  .leftContainer p {
    width: 80%;
    margin: 20px auto;
    position: relative;
    letter-spacing: 0.5px;
  }

  .name {
    margin-top: 10px;
    margin-left: 20px;
    color: #777777;
    font-weight: 700;
    font-size: 12px;
    line-height: 1.2;
    letter-spacing: -1.2px;
  }
  .liran {
    position: relative;
    margin-top: 10px;
    margin-left: 20px;
    color: #48355b;
    font-family: 'Raleway', sans-serif;
    font-weight: 800;
    font-size: 48px;
    line-height: 0.8;
    letter-spacing: -2px;
  }
  .yin {
    position: relative;
    margin-left: 20px;
    color: #48355b;
    font-family: 'Raleway', sans-serif;
    font-weight: 800;
    font-size: 48px;
    line-height: 0.8;
    letter-spacing: -2px;
  }
}

/* web development */

.Content {
  /* border: 1px solid green; */
  background-color: #f1e9e6;
  position: relative;
  margin-top: 100px;
}

.ContentContainer {
  width: 100%;
  display: grid;
  grid-template-columns: repeat(4, 4fr);
  grid-template-rows: repeat(2, 2fr);
}

.Piece {
  /* border: 1px solid green; */
  position: relative;
  width: 100%;
  padding-top: 100%;
  transition: visibility 2s ease-in;
  background-size: cover;
}

.Piece:hover .Fade {
  visibility: visible;
}

.Fade {
  background-color: #31223fd9;
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  visibility: hidden;
}

.Fade h2 {
  /* border: 1px solid green; */
  position: relative;
  top: 40%;
  left: 50%;
  transform: translate(-50%, -50%);
  -webkit-text-fill-color: white;
  font-size: 16px;
  font-weight: bold;
  letter-spacing: 1px;
  line-height: 1;
}
.Fade h3 {
  position: relative;
  top: 40%;
  left: 50%;
  transform: translate(-50%, -50%);
  -webkit-text-fill-color: rgba(255, 255, 255, 0.66);
  font-weight: lighter;
  font-size: 14px;
  line-height: 1;
}
.Fade button {
  position: absolute;
  bottom: 15%;
  left: 50%;
  transform: translateX(-50%);
  -webkit-text-fill-color: white;
  font-size: 16px;
  font-weight: bold;
  border: 2px solid white;
  border-radius: 5px;
  padding: 4px 5px;
  cursor: pointer;
}

.Fade button:hover {
  border: 2px solid #ed5e6a;
  -webkit-text-fill-color: #ed5e6a;
}
@media (max-width: 768px) {
  .ContentContainer {
    width: 100%;
    display: grid;
    grid-template-columns: repeat(2, 2fr);
  }
}

@media (max-width: 640px) {
  .ContentContainer {
    width: 100%;
    display: grid;
    grid-template-columns: repeat(1, 1fr);
  }
}

.Content .Header {
  box-shadow: 0px 3px 12px 0px #2c203797;
}

.additional p {
  padding-top: 50px;
  -webkit-text-fill-color: white;
  text-align: center;
  line-height: 1.6;
}

